prototype pruning old folders on date format targets

--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/DropboxTransfer/help-pruneRoot.html
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/DropboxTransfer/help-pruneRoot.html
@@ -24,7 +24,7 @@
 
 <div>
     <p>A date format directory format can lead to a long list of directories. Removing old directories in the remote
-        root will allow you to prune the directories.</p>
+        root will allow you to prune that list.</p>
 
-    <p>Every directory a day over the max age will be deleted.</p>
+    <p>Directories older then the max days will be deleted.</p>
 </div>
